<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainFragment"
    android:id="@+id/MainFragment"
    android:orientation="vertical">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_listmovies"
            android:id="@+id/all_movie_button"
            android:layout_gravity="center_horizontal"
            android:enabled="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fileview"
            android:id="@+id/file_view_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:id="@+id/settings_button"
            android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="Recent movies"
        android:textSize="20dp"
        android:paddingTop="30dp"/>


        <GridView
            android:paddingTop="20dp"
            android:id="@+id/recent_movie_grid"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:columnWidth="92dp"

            android:numColumns="5"
            android:stretchMode="columnWidth"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/recent_movie_item"
            />



</LinearLayout>
